--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "graphql-resolvers": "^0.2.2",
     "jsonwebtoken": "^8.3.0",
     "nodemailer": "^6.4.10",
-    "pg": "^7.5.0",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^4.41.0",
     "uuid": "^3.3.2"
   }
