--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "postgres",
     "password": "Sseasol@)!(2020",
-    "database": "mytestdatabase",
+    "database": "mytestdatabase11",
     "host": "localhost",
     "dialect": "postgres",
     "port": 5000
@@ -10,7 +10,7 @@
   "test": {
     "username": "postgres",
     "password": "Sseasol@)!(2020",
-    "database": "mytestdatabase",
+    "database": "mytestdatabase11",
     "host": "localhost",
     "dialect": "postgres",
     "port": 5000
@@ -18,7 +18,7 @@
   "production": {
     "username": "postgres",
     "password": "Sseasol@)!(2020",
-    "database": "mytestdatabase",
+    "database": "mytestdatabase11",
     "host": "localhost",
     "dialect": "postgres",
     "port": 5000
